# thetawave-game-starter

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
.claude/agents/: bevy-crate-researcher.md  bevy-engine-expert.md  game-execution-analyzer.md  rust-expert.md
.github/workflows/: ci.yml
assets/: background.assets.ron  game.assets.ron  mobs.assets.ron  music.assets.ron  ui.assets.ron
assets/media/aseprite/: arrow_button.aseprite  blast_projectile.aseprite  blast_projectile_despawn.aseprite  (+46 more)
scripts/pcloud/: .env.example  README.md  pcloud_sync.py  sync.sh
src/: main.rs
src/assets/: data.rs  mod.rs  plugin.rs  systems.rs
src/audio/: data.rs  mod.rs  plugin.rs  systems.rs
src/backgrounds/: data.rs  plugin.rs  systems.rs
src/camera/: plugin.rs  systems.rs
src/core/: mod.rs
src/input/: data.rs  mod.rs  plugin.rs  systems.rs
src/options/: data.rs  plugin.rs  systems.rs
src/physics/: mod.rs  plugin.rs  systems.rs
src/player/: data.rs  mod.rs  plugin.rs  systems.rs
src/save/: data.rs  mod.rs  plugin.rs  systems.rs
src/states/: data.rs  mod.rs  plugin.rs  systems.rs
src/ui/: data.rs  mod.rs  plugin.rs  systems.rs
src/window/: mod.rs  plugin.rs  systems.rs
thetawave-assets/: Cargo.toml
thetawave-assets/src/: data.rs  data_loader.rs  lib.rs  manual_loader.rs  plugin.rs  systems.rs
thetawave-backgrounds/: Cargo.toml
thetawave-backgrounds/src/: data.rs  lib.rs  plugin.rs  systems.rs
thetawave-camera/: Cargo.toml
thetawave-camera/src/: data.rs  lib.rs  systems.rs
thetawave-core/: Cargo.toml
thetawave-core/src/: data.rs  data_loader.rs  lib.rs  logging.rs  plugin.rs  tags.rs
thetawave-core/src/states/: data.rs  mod.rs  plugin.rs  systems.rs
thetawave-debug/: Cargo.toml
thetawave-debug/src/: lib.rs
thetawave-debug/src/mob_view/: behavior.rs  camera.rs  data.rs  groups.rs  mod.rs  plugin.rs  selection.rs  stats.rs  ui.rs  window.rs
thetawave-infinite/: Cargo.toml
thetawave-infinite/src/: main.rs
thetawave-infinite/src/ui/: mod.rs  plugin.rs
thetawave-infinite/src/ui/systems/: game_debug.rs  mod.rs
thetawave-mob-editor/: Cargo.toml
thetawave-mob-editor/src/: lib.rs  main.rs  plugin.rs  states.rs
thetawave-mob-editor/src/data/: mob_asset_registry.rs  mod.rs  session.rs  sprite_registry.rs
thetawave-mob-editor/src/file/: assets_ron_parser.rs  browser.rs  mobs_assets_ron_parser.rs  mod.rs  operations.rs  validation.rs
thetawave-mob-editor/src/preview/: camera.rs  collider_gizmos.rs  joint_gizmos.rs  jointed_mobs.rs  mod.rs  sprite_renderer.rs
thetawave-mob-editor/src/ui/: file_panel.rs  layout.rs  mod.rs  properties_panel.rs  toolbar.rs
thetawave-mob-editor/src/ui/properties_panel/: behavior.rs  colliders.rs  decorations.rs  fields.rs  jointed.rs  mod.rs  spawners.rs
thetawave-mob-editor/src/ui/properties_panel/behavior/: action_ops.rs  mod.rs  navigation.rs  node_rendering.rs  transmit_ops.rs  tree_ops.rs
thetawave-mobs/: Cargo.toml
thetawave-mobs/data/: mob_attributes.toml  mob_behaviors.toml
thetawave-mobs/src/: data.rs  lib.rs  plugin.rs  systems.rs
thetawave-mobs/src/asset/: error.rs  loader.rs  mob_asset.rs  mob_patch.rs  mod.rs  registry.rs
thetawave-mobs/src/attributes/: data.rs  mod.rs  plugin.rs
thetawave-mobs/src/attributes/data/: joints.rs  mod.rs  spawners.rs
thetawave-mobs/src/behavior/: builder.rs  data.rs  mod.rs  plugin.rs  systems.rs  toml_data.rs
thetawave-mobs/src/spawn/: mod.rs
thetawave-particles/: Cargo.toml
thetawave-particles/src/: data.rs  lib.rs  plugin.rs  spawn.rs  systems.rs
thetawave-physics/: Cargo.toml
thetawave-physics/src/: data.rs  lib.rs  plugin.rs  systems.rs
thetawave-player/: Cargo.toml
thetawave-player/data/: abilities.toml  character_attributes.toml
thetawave-player/src/: cooldown.rs  lib.rs
thetawave-player/src/ability/: mod.rs  systems.rs
thetawave-player/src/character/: data.rs  mod.rs  systems.rs
thetawave-player/src/input/: data.rs  mod.rs  plugin.rs  systems.rs
thetawave-player/src/player/: data.rs  mod.rs  systems.rs
thetawave-projectiles/: Cargo.toml
thetawave-projectiles/data/: projectile_attributes.toml
thetawave-projectiles/src/: lib.rs  plugin.rs
thetawave-projectiles/src/attributes/: data.rs  mod.rs  plugin.rs
thetawave-projectiles/src/spawn/: effect.rs  mod.rs  projectile.rs
thetawave-projectiles/src/systems/: mod.rs
thetawave-starter/: Cargo.toml
thetawave-starter/src/: embedded_reader.rs  lib.rs  main.rs
thetawave-starter/src/assets/: data.rs  plugin.rs
thetawave-starter/src/audio/: data.rs  mod.rs  plugin.rs  systems.rs
thetawave-starter/src/backgrounds/: data.rs  mod.rs  plugin.rs  spawn.rs  systems.rs
thetawave-starter/src/camera/: data.rs  mod.rs  plugin.rs  systems.rs
thetawave-starter/src/collisions/: mod.rs
thetawave-starter/src/core/: mod.rs
thetawave-starter/src/input/: mod.rs  plugin.rs  systems.rs
thetawave-starter/src/options/: data.rs  mod.rs  plugin.rs  systems.rs
thetawave-starter/src/particles/: mod.rs  plugin.rs  spawn.rs
thetawave-starter/src/physics/: plugin.rs
thetawave-starter/src/player/: data.rs  mod.rs  plugin.rs  systems.rs
thetawave-starter/src/save/: data.rs  plugin.rs
thetawave-starter/src/states/: mod.rs
thetawave-starter/src/ui/: data.rs  mod.rs  plugin.rs
thetawave-starter/src/ui/systems/: character_selection.rs  egui.rs  game_debug.rs  game_end.rs  input_rebinding.rs  loading.rs  mod.rs  options.rs  pause.rs  title.rs
thetawave-starter/src/window/: plugin.rs  systems.rs
thetawave-states/: Cargo.toml
thetawave-states/src/: data.rs  lib.rs  plugin.rs  systems.rs
thetawave-test/: Cargo.toml
thetawave-test-game/: Cargo.toml  Trunk.toml  build.rs  index.html
thetawave-test-game/assets/: background.assets.ron  background.assets.ron.example  game.assets.ron  mobs.assets.ron  music.assets.ron  ui.assets.ron  ui.assets.ron.example
thetawave-test-game/assets/data/: character_attributes.toml.example
thetawave-test-game/assets/mobs/xhitara/: spitter.mobpatch.example
thetawave-test-game/src/: main.rs
(+76 files in other folders)
