[workspace]
members = [
    "thetawave-starter",
    "thetawave-test-game",
    "thetawave-physics",
    "thetawave-assets",
    "thetawave-backgrounds",
    "thetawave-debug",
    "thetawave-mobs",
    "thetawave-player",
    "thetawave-camera",
    "thetawave-projectiles",
    "thetawave-core",
    "thetawave-particles",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
bevy = { version = "0.17.3", default-features = false }
bevy_platform = "0.17.3"
bevy_egui = { version = "0.38.0", default-features = false, features = [
    "open_url",
    "default_fonts",
    "render",
] }
bevy-alt-ui-navigation-lite = "0.5.0"
bevy_asset_loader = { version = "0.23.0", features = [
    "progress_tracking",
    "standard_dynamic_assets",
] } # subscribed to pr
bevy_embedded_assets = "0.14.0"
bevy_state_macros = "0.17.3"
rand = "0.9.2"
webbrowser = "1.0.6"
bevy_aseprite_ultra = "0.7.0"
iyes_progress = "0.14.0" # subscribed to pr
bevy_kira_audio = { version = "0.24.0", features = ["mp3", "wav"] }
serde = "1.0.228"
bevy-persistent = { version = "0.9.0", features = ["all"] }
dirs = "6.0.0"
leafwing-input-manager = "0.19.0"
avian2d = { version = "0.4.1", features = ["debug-plugin"] }
strum = "0.27.2"
strum_macros = "0.27.2"
winit = "0.30.12"
image = "0.25.9"
itertools = "0.14.0"
toml = "0.9.8"
bevy_behave = "0.4.0"
bevy-inspector-egui = "0.35.0"
bevy_enoki = "0.5"
web-sys = "0.3.83"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
