[package]
name = "thetawave-assets"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-core = { path = "../thetawave-core" }
bevy = { workspace = true, features = [
    "bevy_scene",
    "bevy_text",
    "default_font",
] }
bevy_enoki.workspace = true
bevy_aseprite_ultra.workspace = true
bevy_kira_audio = { workspace = true, features = ["mp3", "wav"] }
rand.workspace = true
ron = "0.10"

bevy_asset_loader = { workspace = true }

# Optional dependency for progress_tracking feature (awaiting Bevy 0.17 compatibility)
iyes_progress = { workspace = true, optional = true }

[features]
default = []
progress_tracking = ["dep:iyes_progress"]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-core/dynamic_linking"]
