[package]
name = "thetawave-backgrounds"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-states = { path = "../thetawave-states" }
thetawave-assets = { path = "../thetawave-assets" }
rand.workspace = true
bevy = { workspace = true, features = [
    "bevy_pbr",
    "bevy_scene",
    "bevy_gltf",
    "bevy_render",
    "bevy_color",
    "multi_threaded",
    "async_executor",
] }


[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-states/dynamic_linking",
    "thetawave-assets/dynamic_linking",
]
