[package]
name = "thetawave-backgrounds"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-core = { path = "../thetawave-core" }
bevy = { workspace = true, features = ["multi_threaded", "async_executor"] }


[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-core/dynamic_linking"]
