[package]
name = "thetawave-core"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, features = [
    "bevy_color",
    "serialize",
    "bevy_state",
] }
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
toml.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = [
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
] }

[features]
dynamic_linking = ["bevy/dynamic_linking"]
debug = []
