[package]
name = "thetawave-debug"
version.workspace = true
edition.workspace = true

[dependencies]
bevy-inspector-egui.workspace = true
bevy = { workspace = true, default-features = false }
thetawave-states = { path = "../thetawave-states" }
[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-states/dynamic_linking"]
