[package]
name = "thetawave-debug"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-states = { path = "../thetawave-states" }
bevy.workspace = true
bevy-inspector-egui.workspace = true

[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-states/dynamic_linking"]
