[package]
name = "thetawave-infinite"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_egui = { workspace = true }
bevy = { workspace = true, default-features = false }
thetawave-starter = { path = "../thetawave-starter" }

[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]
physics_debug = []
