[package]
name = "thetawave-infinite"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_egui = { workspace = true }
bevy = { workspace = true, default-features = false }
thetawave-starter = { path = "../thetawave-starter" }

[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-starter/dynamic_linking"]
default = ["thetawave-starter/physics_debug", "dynamic_linking"]
