[package]
name = "thetawave-infinite"
version.workspace = true
edition.workspace = true

[dependencies]
bevy_egui.workspace = true
bevy = { workspace = true, default-features = false }
strum.workspace = true
thetawave-starter = { path = "../thetawave-starter" }

[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-starter/dynamic_linking"]
default = ["debug", "dynamic_linking"]
debug = ["thetawave-starter/debug"]
