[package]
name = "thetawave-mobs"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false }
bevy_aseprite_ultra.workspace = true
avian2d.workspace = true
serde.workspace = true
toml.workspace = true
rand.workspace = true
strum_macros.workspace = true
strum.workspace = true
bevy_behave.workspace = true
thetawave-assets = { path = "../thetawave-assets" }
thetawave-states = { path = "../thetawave-states" }
thetawave-physics = { path = "../thetawave-physics" }
thetawave-player = { path = "../thetawave-player" }

[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-assets/dynamic_linking"]
