[package]
name = "thetawave-mobs"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-assets = { path = "../thetawave-assets" }
thetawave-states = { path = "../thetawave-states" }
thetawave-physics = { path = "../thetawave-physics" }
thetawave-player = { path = "../thetawave-player" }
thetawave-projectiles = { path = "../thetawave-projectiles" }
thetawave-core = { path = "../thetawave-core" }
thetawave-particles = { path = "../thetawave-particles" }
bevy = { workspace = true, features = [
    "bevy_sprite",
    "animation",
    "serialize",
    "multi_threaded",
    "async_executor",
] }
bevy_aseprite_ultra.workspace = true
avian2d.workspace = true
serde.workspace = true
rand.workspace = true
bevy_behave.workspace = true


[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-assets/dynamic_linking",
    "thetawave-states/dynamic_linking",
    "thetawave-physics/dynamic_linking",
    "thetawave-player/dynamic_linking",
    "thetawave-projectiles/dynamic_linking",
    "thetawave-core/dynamic_linking",
    "thetawave-particles/dynamic_linking",
]
debug = []
