[package]
name = "thetawave-mobs"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-assets = { path = "../thetawave-assets", default-features = false }
thetawave-physics = { path = "../thetawave-physics" }
thetawave-core = { path = "../thetawave-core" }
thetawave-projectiles = { path = "../thetawave-projectiles" }
thetawave-particles = { path = "../thetawave-particles" }
bevy = { workspace = true, features = [
    "bevy_sprite",
    "animation",
    "serialize",
    "multi_threaded",
    "async_executor",
] }
bevy_aseprite_ultra.workspace = true
avian2d.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
rand.workspace = true
bevy_behave.workspace = true
bevy_asset_loader.workspace = true
toml.workspace = true

[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-assets/dynamic_linking",
    "thetawave-physics/dynamic_linking",
    "thetawave-projectiles/dynamic_linking",
    "thetawave-core/dynamic_linking",
    "thetawave-particles/dynamic_linking",
]
debug = ["thetawave-core/debug"]
