[package]
name = "thetawave-particles"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false }
bevy_enoki.workspace = true
thetawave-states = { path = "../thetawave-states" }
thetawave-assets = { path = "../thetawave-assets" }

[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-states/dynamic_linking",
    "thetawave-assets/dynamic_linking",
]
