[package]
name = "thetawave-particles"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-assets = { path = "../thetawave-assets" }
thetawave-core = { path = "../thetawave-core" }
bevy = { workspace = true, features = [
    "multi_threaded",
    "async_executor",
] }
bevy_enoki.workspace = true


[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-assets/dynamic_linking",
    "thetawave-core/dynamic_linking",
]
