[package]
name = "thetawave-physics"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false }
serde.workspace = true
thetawave-states = { path = "../thetawave-states" }
avian2d = { workspace = true }


[features]
physics_debug = ["avian2d/diagnostic_ui"]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-states/dynamic_linking"]
