[package]
name = "thetawave-physics"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-states = { path = "../thetawave-states" }
bevy = { workspace = true, features = [
    "bevy_gizmos",
    "multi_threaded",
    "async_executor",
] }
serde.workspace = true
avian2d.workspace = true


[features]
physics_debug = ["avian2d/diagnostic_ui"]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-states/dynamic_linking"]
