[package]
name = "thetawave-player"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-states = { path = "../thetawave-states" }
thetawave-assets = { path = "../thetawave-assets" }
bevy = { workspace = true, features = [
    "bevy_gilrs",
    "serialize",
    "multi_threaded",
    "async_executor",
] }
avian2d.workspace = true
serde.workspace = true
strum_macros.workspace = true
strum.workspace = true
leafwing_abilities.workspace = true
leafwing-input-manager.workspace = true
bevy-alt-ui-navigation-lite.workspace = true

[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-states/dynamic_linking",
    "thetawave-assets/dynamic_linking",
]
