[package]
name = "thetawave-projectiles"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, default-features = false }
thetawave-assets = { path = "../thetawave-assets" }
thetawave-states = { path = "../thetawave-states" }
thetawave-core = { path = "../thetawave-core" }
bevy_aseprite_ultra.workspace = true
avian2d.workspace = true

[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-assets/dynamic_linking"]
debug = []
