[package]
name = "thetawave-projectiles"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-assets = { path = "../thetawave-assets" }
thetawave-core = { path = "../thetawave-core" }
thetawave-physics = { path = "../thetawave-physics" }
bevy = { workspace = true, features = [
    "bevy_sprite",
    "animation",
    "serialize",
    "multi_threaded",
    "async_executor",
] }
serde.workspace = true
bevy_aseprite_ultra.workspace = true
avian2d.workspace = true

[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-assets/dynamic_linking",
    "thetawave-physics/dynamic_linking",
    "thetawave-core/dynamic_linking",
]
