[package]
name = "thetawave-starter"
version.workspace = true
edition.workspace = true

[dependencies]
thetawave-physics = { path = "../thetawave-physics" }
thetawave-assets = { path = "../thetawave-assets" }
thetawave-mobs = { path = "../thetawave-mobs" }
thetawave-projectiles = { path = "../thetawave-projectiles" }
thetawave-player = { path = "../thetawave-player" }
thetawave-camera = { path = "../thetawave-camera" }
thetawave-debug = { path = "../thetawave-debug", optional = true }
thetawave-core = { path = "../thetawave-core" }
thetawave-particles = { path = "../thetawave-particles" }
bevy = { workspace = true, features = [
    "bevy_winit",
    "tonemapping_luts",
    "bevy_ui",
    "bevy_text",
    "bevy_sprite",
    "bevy_window",
    "bevy_gilrs",
    "bevy_core_pipeline",
    "bevy_render",
    "hdr",
    "bevy_color",
    "animation",
    "png",
    "bevy_state",
    "default_font",
    "multi_threaded",
    "async_executor",
    "bevy_gltf",
] }
bevy_platform.workspace = true
bevy_egui.workspace = true
bevy-alt-ui-navigation-lite.workspace = true
bevy_asset_loader.workspace = true
webbrowser.workspace = true
bevy_aseprite_ultra.workspace = true
bevy_kira_audio.workspace = true
serde.workspace = true
bevy-persistent.workspace = true
dirs.workspace = true
leafwing-input-manager.workspace = true
leafwing_abilities.workspace = true
avian2d.workspace = true
strum.workspace = true
winit.workspace = true
image.workspace = true
itertools.workspace = true
bevy_embedded_assets.workspace = true
rand.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["webgpu"] }

[target.'cfg(target_family = "unix")'.dependencies]
bevy = { workspace = true, features = ["x11"] }

[features]
dynamic_linking = [
    "bevy/dynamic_linking",
    "thetawave-physics/dynamic_linking",
    "thetawave-assets/dynamic_linking",
    "thetawave-debug/dynamic_linking",
    "thetawave-mobs/dynamic_linking",
    "thetawave-projectiles/dynamic_linking",
    "thetawave-player/dynamic_linking",
    "thetawave-camera/dynamic_linking",
    "thetawave-core/dynamic_linking",
    "thetawave-particles/dynamic_linking",
]
debug = [
    "thetawave-debug",
    "thetawave-physics/physics_debug",
    "thetawave-mobs/debug",
]
