[package]
name = "thetawave-test-game"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true, features = [] }
thetawave-starter = { path = "../thetawave-starter", default-features = false }

[features]
dynamic_linking = ["bevy/dynamic_linking", "thetawave-starter/dynamic_linking"]
default = ["debug", "dynamic_linking"]
debug = ["thetawave-starter/debug"]
progress_tracking = ["thetawave-starter/progress_tracking"]
